GNOME Bugzilla – Bug 771432
segfault when trying to add/configure a wired connection
Last modified: 2016-09-14 15:19:50 UTC
Created attachment 335517 [details] G-C-C backtrace Connected to what was reported in #771251, gnome-control-center segfaults when trying to edit a wired connection. Steps to reproduce: 1) go to Network/Wired 2) Add Profile 3) Under IPv4, try to enter IP and Gateway. The application will crash with the attached backtrace.
Fixed in master for 3.22.0, thanks